syntax = "proto3";

package lautta.rpc.raft.v1;

option go_package = "github.com/jukeks/lautta/rpc/raft";

service RaftService {
    rpc Healthcheck(HealthcheckRequest) returns (HealthcheckResponse);
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
}

message HealthcheckRequest {}
message HealthcheckResponse {}

message RequestVoteRequest {
  string term = 1;
  string candidate_id = 2;
  int64 last_log_index = 3;
  int64 last_log_term = 4;
}

message RequestVoteResponse {
  string term = 1;
  bool vote_granted = 2;
}

message AppendEntriesRequest {
  string term = 1;
  string leader_id = 2;
  int64 prev_log_index = 3;
  int64 prev_log_term = 4;
  repeated Entry entries = 5;
  int64 leader_commit = 6;
}

message AppendEntriesResponse {
  string term = 1;
  bool success = 2;
}

message Entry {

}